--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="86" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="86" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -482,7 +482,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
 
             <div class="mbr-table-md-up">
                 <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
-                    <h2 class="mbr-info-subtitle mbr-section-subtitle"><span style="font-style: normal;">GETModer Ecosystem has adopted blockchain technology to launch Initial Token Public Offering to early participants, to fund further development of our platform.</span><br><br><span style="font-style: normal;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1<br></span><br><span style="font-style: normal;"><br></span><br></h2>
+                    <h2 class="mbr-info-subtitle mbr-section-subtitle"><span style="font-style: normal;">GETModer Ecosystem has adopted blockchain technology to launch Initial Token Public Offering to early participants, to fund further operations &amp; development of our platform.</span><br><span style="font-style: normal;"><br></span>There is only one contribution address:<br><strong><em>0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1<br></em></strong><br><span style="font-style: normal;"><br></span><br></h2>
                     
                 </div>
 
