--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="413" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="413" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -112,8 +112,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1</h3>
-                <small class="mbr-section-subtitle">(Only One Contribtuion Address)<br><br>◎1 ETH = 12,000 GTMR Token
-<br><br>◎Minimum contribution 0.1 ETH
+                <small class="mbr-section-subtitle">(Only One Contribtuion Address)<br><br>◎ 1 ETH = 12,000 GTMR Token
+<br><br>◎ Minimum contribution 0.1 ETH
 <br><br>◎ Maximum Contribtion &nbsp;of 20 ETH per-Ethereum-address, to ensure fair share of this unique business opportunity for global particaipation&nbsp;<br></small>
             </div>
         </div>
