--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="56" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="56" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -561,7 +561,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
         <div class="lead"><div><span style="font-size: 1.07rem;">GETModer is an institutional hybrid blockchain technology company focused on crypto-loan &amp; cryptocurrency exchange. We have developed a highly scalable, secure, permissioned and commercial grade platform architecture powered by Ethereum Network,</span></div><div>
 </div><div><br></div><div><span style="font-size: 1.07rem;">GETModer Ecosystem management team &amp; developer has decided to adopt blockchian crowdfunding mechanism, Initial Token Offering (ITO) to support and fund our future crypto projects .</span></div><div><span style="font-size: 1.07rem;"><br></span></div><div><span style="font-size: 1.07rem;">Initial Token Offering or ITO acts as entry point for investors to participate in our crypto projects.</span></div><div><br></div><div>
 </div><div>
-</div><div>A total of 251 million GTMR (ERC20) tokens will be genreated during the IEO Event, of which 150 million token will be available for public investors and the developer team will hold 100 million token. 1 million GTMR token will be reserved for Bounty program. Hard cap is set at USD 20 million. Any unsold token will be burnt at the completion of the ITO event. Common currency for IEO contribution will be ETHER only. Minimum investment is set as 0.1 ETHER.
+</div><div>A total of 251 million GTMR (ERC20) tokens will be genreated during the ITO Event, of which 150 million token will be available for public investors and the developer team will hold 100 million token. 1 million GTMR token will be reserved for Bounty program. Hard cap is set at USD 20 million. Any unsold token will be burnt at the completion of the ITO event. Common currency for ITO contribution will be ETHER only. Minimum investment is set as 0.1 ETHER.
 </div><div>
 </div><div><br></div><div>The GETModer ITO Event will be set at three stages, Early Bird, Pre-ITO and ITO. Official contribution event will start at 15 April 2018 and end at 15 July 2018.
 </div><div>
